--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.New_Year_New_Hacks">
+        <activity android:name=".AngerGif"></activity>
+        <activity android:name=".AnxietyGif" />
+        <activity android:name=".SadnessGif" />
+        <activity android:name=".ChooseMood" />
+        <activity android:name=".ExercisesPage" />
+        <activity android:name=".WelcomePage" />
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
